[package]
name = "rust_connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
mysql = "24.0.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "tls-rustls"] }
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
